--- a/index.html
+++ b/index.html
@@ -1,9 +1,127 @@
-NPM Clone Nifty Penguin Magic npm Enterprise Products Solutions Resources Docs Support Search Join Log In Build amazing
-things Essential JavaScript development tools that help you go to market faster and build powerful applications using
-modern open source code. See plans Join for free Bring the best of open source to your company npm is the tool used by
-over 11,000,000 JavaScript developers around the world. Your developers already use it. Your company depends on it.
-Create an Org and get more out of the tools your team already knows and loves. Zero configuration Create an org, add
-your team, and start collaborating. Nothing to configure, set up, or manage. Team management Control who has access to
-what modules within your team namespace using straightforward team management capabilities. Familiar features npm Orgs
-has 100% parity with all the public npm registry features your developers already use. npm audit Enjoy the security
-auditing features built into the npm client, a zero-friction way to make open source software safer. Create an Org
+<html lang="en">
+  <header>
+    <div>
+      <div>
+        <img class="blackHeart" src="images/black-heart.png" alt="black-heart" />
+        <span> Nifty Penguin Magic </span>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#"> npm Enterprise </a></li>
+          <li><a href="#"> Products </a></li>
+          <li><a href="#"> Solutions </a></li>
+          <li><a href="#"> Resources </a></li>
+          <li><a href="#"> Docs </a></li>
+          <li><a href="#"> Support </a></li>
+        </ul>
+      </nav>
+    </div>
+
+    <div>
+      <!-- add logo, search bar and buttons (or links and style them as buttons later) -->
+      <div class="topnav">
+        <img src="images/npm-logo.png" alt="NPM-logo">
+      </div>
+      <div class="search"
+      <form action="/some-url" method="get">
+        <img src="images/magnifying-glass.png" alt="magnifying-glass" />
+        <input type="text" name="search" id="search" placeholder="Search packages">
+        <button>Submit</button>
+      </form>
+      </div>
+      <div class="joinlog">
+        <a id="box" href="#">Join</a>
+        <a href="#">Login</a>
+      </div>
+    </div>
+  </header>
+
+<body>
+
+  <section id="top">
+  <h1>Build Amazing Things</h1>
+  <article>
+    <p>Essential JavaScript development tools that help you go to market faster and build powerful applications using modern open source code.</p>
+  </article>
+  <div>
+    <form action="" method="get">
+    <button>See plans</button>
+    </form>
+    <a href="#">Join for free!</a>
+  </div>
+</section>
+
+<section id="mid">
+  <img src="images/triangle-hexagon.svg" alt="Hexagon-Logo">
+  <h2>Bring the best of open source to your company! </h2>
+  <article>
+    <p>npm is the tool used by over 11,000,000 JavaScript developers around the world. Your developers already use it. Your company depends on it. Create an Org and get more out of the tools your team already knows and loves.</p>
+  </article>
+</section>
+
+<section id="bottom">
+  <div>
+    <div>
+      <img src="images/zero-configuration.svg" alt="zero-configuration"
+      <h3>Zero Configuration </h3>
+      <p>Create an org, add your team, and start collaborating. Nothing to configure, set up, or manage.</p>
+   </div>
+
+   <div>
+      <img src="images/team-management.svg" alt="team-management"
+      <h3>Team Management </h3>
+      <p>Control who has access to what modules within your team namespace using straightforward team management capabilities.</p>
+   </div>
+
+   <div>
+      <img src="images/familiar-features.svg" alt="familiar-features"
+     <h3>Familiar Features </h3>
+      <p>npm Orgs has 100% parity with all the public npm registry features your developers already use.</p>
+    </div>
+
+   <div>
+      <img src="images/npm-audit.svg" alt="npm-audit"
+     <h3>npm Audit </h3>
+      <p>Enjoy the security auditing features built into the npm client, a zero-friction way to make open source software safer.</p>
+   </div>
+
+   <div class="button2">
+    <button type="button">Create an Org</button>
+   </div>
+
+   </div>
+
+</section>
+</body>
+</html>
+
+
+
+<!--
+NPM Clone
+Nifty Penguin Magic 
+npm Enterprise 
+Products 
+Solutions 
+Resources 
+Docs 
+Support 
+Search 
+Join
+Log In
+Build amazing things
+Essential JavaScript development tools that help you go to market faster and build powerful applications using modern open source code. 
+See plans 
+Join for free
+Bring the best of open source to your company
+npm is the tool used by over 11,000,000 JavaScript developers around the world. Your developers already use it. Your company depends on it. Create an Org and get more out of the tools your team already knows and loves.
+Zero configuration
+Create an org, add your team, and start collaborating. Nothing to configure, set up, or manage.
+Team management 
+Control who has access to what modules within your team namespace using straightforward team management capabilities. 
+Familiar features 
+npm Orgs has 100% parity with all the public npm registry features your developers already use. 
+npm audit 
+Enjoy the security auditing features built into the npm client, a zero-friction way to make open source software safer. 
+Create an Org 
+-->
