--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+  <link rel="stylesheet" href="./style.css">
   <header>
     <div>
       <div>
@@ -19,18 +20,20 @@
 
     <div>
       <!-- add logo, search bar and buttons (or links and style them as buttons later) -->
-      <div class="topnav">
+      <div class="npm">
         <img src="images/npm-logo.png" alt="NPM-logo">
       </div>
       <div class="search"
-      <form action="/some-url" method="get">
-        <img src="images/magnifying-glass.png" alt="magnifying-glass" />
-        <input type="text" name="search" id="search" placeholder="Search packages">
-        <button>Submit</button>
-      </form>
+        form action="" method="get">
+         <input type="text" name="search" id="search" placeholder="Search packages">
+         <button>Submit</button>
+         <img src="images/magnifying-glass.png" alt="mag-glass">
+        </form>
       </div>
       <div class="joinlog">
         <a id="box" href="#">Join</a>
+      </div>
+      <div class="Login">
         <a href="#">Login</a>
       </div>
     </div>
@@ -45,9 +48,11 @@
   </article>
   <div>
     <form action="" method="get">
-    <button>See plans</button>
+    <button1>See plans</button1>
     </form>
-    <a href="#">Join for free!</a>
+    <form action="" method="get">
+    <button2>Join for free!</button2>
+    </form>
   </div>
 </section>
 
@@ -62,34 +67,33 @@
 <section id="bottom">
   <div>
     <div>
-      <img src="images/zero-configuration.svg" alt="zero-configuration"
+      <img src="images/zero-configuration.svg" alt="zero-configuration" />
       <h3>Zero Configuration </h3>
-      <p>Create an org, add your team, and start collaborating. Nothing to configure, set up, or manage.</p>
-   </div>
-
-   <div>
-      <img src="images/team-management.svg" alt="team-management"
-      <h3>Team Management </h3>
-      <p>Control who has access to what modules within your team namespace using straightforward team management capabilities.</p>
-   </div>
-
-   <div>
-      <img src="images/familiar-features.svg" alt="familiar-features"
-     <h3>Familiar Features </h3>
-      <p>npm Orgs has 100% parity with all the public npm registry features your developers already use.</p>
+     <p>Create an org, add your team, and start collaborating. Nothing to configure, set up, or manage.</p>
     </div>
 
-   <div>
-      <img src="images/npm-audit.svg" alt="npm-audit"
+    <div>
+     <img src="images/team-management.svg" alt="team-management" />
+      <h3>Team Management </h3>
+     <p>Control who has access to what modules within your team namespace using straightforward team management capabilities.</p>
+    </div>
+
+    <div>
+     <img src="images/familiar-features.svg" alt="familiar-features" />
+      <h3>Familiar Features </h3>
+     <p>npm Orgs has 100% parity with all the public npm registry features your developers already use.</p>
+    </div>
+
+    <div>
+     <img src="images/npm-audit.svg" alt="npm-audit" />
      <h3>npm Audit </h3>
-      <p>Enjoy the security auditing features built into the npm client, a zero-friction way to make open source software safer.</p>
-   </div>
+     <p>Enjoy the security auditing features built into the npm client, a zero-friction way to make open source software safer.</p>
+    </div>
+  </div>
 
-   <div class="button2">
+  <div class="button2">
     <button type="button">Create an Org</button>
-   </div>
-
-   </div>
+  </div>
 
 </section>
 </body>
