--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img src="images/npm-logo.png" alt="NPM-logo">
       </div>
       <div class="search"
-        form action="" method="get">
+        form action="/some-url" method="get">
          <input type="text" name="search" id="search" placeholder="Search packages">
          <button>Submit</button>
          <img src="images/magnifying-glass.png" alt="mag-glass">
@@ -47,12 +47,8 @@
     <p>Essential JavaScript development tools that help you go to market faster and build powerful applications using modern open source code.</p>
   </article>
   <div>
-    <form action="" method="get">
-    <button1>See plans</button1>
-    </form>
-    <form action="" method="get">
-    <button2>Join for free!</button2>
-    </form>
+    <a href="#" class="button1">See Plans</a>
+    <a href="#" class=button2>Join for free!</a>
   </div>
 </section>
 
