--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       <div class="npm">
         <img src="images/npm-logo.png" alt="NPM-logo">
       </div>
-      <div class="search"
-        form action="/some-url" method="get">
-         <input type="text" name="search" id="search" placeholder="Search packages">
-         <button>Submit</button>
+      <div class="search">
+        <form action="/some-url" method="get">
          <img src="images/magnifying-glass.png" alt="mag-glass">
+         <input type="text" name="search" id="search" placeholder=" Search packages">
+         <button>Submit</button>
         </form>
       </div>
       <div class="joinlog">
